--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,4 @@
 <!-- app/views/dashboard/index.html.erb -->
 <h1>Welcome to Your Dashboard</h1>
-<p>Hello, <%= @user.email %>!</p>
+<p>Hello, <%= @user.name %>!</p>
 <!-- Add more content as needed -->
