Implemented CRUD operation

--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -17,4 +17,4 @@
   </tbody>
 </table>
 
-<%= link_to 'Back to Transactions', transactions_path %>
+<%= link_to 'Back to Transactions', category_transactions_path %>
