--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,6 +9,11 @@
       <% end %>
       <strong>Total Transactions Amount:</strong> <%= number_to_currency(category.transactions.sum(:amount)) %><br>
       <%= link_to "View Transactions", category_transactions_path(category) %>
+      <%= link_to "View Category", category_path(category) %>
+      
+      <%= form_with url: category_path(category), method: :delete, remote: true do |form| %>
+        <%= form.submit "Delete" %>
+      <% end %>
     </li>
   <% end %>
 </ul>
