--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -15,7 +15,12 @@
         <td><%= transaction.name %></td>
         <td><%= number_to_currency(transaction.amount) %></td>
         <td><%= transaction.category.name %></td>
-
+        <td>
+          <%= link_to 'Show', category_transaction_path(transaction.category, transaction) %>
+          <%= form_with url: category_transaction_path(transaction.category, transaction), method: :delete, remote: true do |form| %>
+            <%= form.submit "Delete" %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
