--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,4 +1,9 @@
 <h1>Transactions</h1>
+<p><strong>Name:</strong> <%= @category.name %></p>
+<% if @category.icon.present? %>
+  <p><strong>Logo:</strong> <%= image_tag(@category.icon, width: 100, height: 100) %></p>
+<% end %>
+<p><strong>Total Transactions Amount:</strong> <%= number_to_currency(@category.transactions.sum(:amount)) %></p>
 
 <table>
   <thead>
