Add more tests and update fix issues

--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -16,4 +16,5 @@
 <% end %>
 
 
-<%= link_to 'Back', category_transactions_path %>
+<%= link_to 'Back', category_transactions_path(category_id: @category.id) %>
+
