--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,37 @@
-<!-- app/views/dashboard/index.html.erb -->
-<h1>Welcome to Your Dashboard</h1>
-<p>Hello, <%= @user.name %>!</p>
-<!-- Add more content as needed -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Dashboard</title>
+</head>
+<body>
+    <div class="dashboard-container">
+        <div class="dashboard-header">
+            <h1>Welcome to Your Dashboard</h1>
+            <p>Hello, <%= @user.name %>!</p>
+        </div>
+
+        <div class="user-profile">
+            <img src="https://github.com/MoyasiGinko/Cost-Management-Capstone/assets/108092696/c78134ef-badd-4ae3-98ac-0e657fd60620" alt="User Profile Image" class="profile-image">
+            <p class="profile-name"><%= @user.name %></p>
+            <p class="profile-details">Email: <%= @user.email %></p>
+            <p class="profile-details">Member Since: <%= @user.created_at.strftime('%B %d, %Y') %></p>
+        </div>
+
+        <a href="<%= categories_path %>" class="dashboard-links">
+            <h2>Go to Categories</h2>
+        </a>
+
+
+        <div class="dashboard-content">
+            <h2>Your Recent Activity</h2>
+            <ul>
+                <li>Recent transaction details go here.</li>
+                <li>Another recent activity item.</li>
+                <!-- Add more activity items as needed -->
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
