--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,36 @@
-<h2>Sign up</h2>
+<h2 class="auth-heading">Register</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'auth-form' }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+  <div class="auth-field">
+    <%= f.label :name, class: 'auth-label' %><br />
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", class: 'auth-input' %>
   </div>
 
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="auth-field">
+    <%= f.label :email, class: 'auth-label' %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'auth-input' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="auth-field">
+    <%= f.label :password, class: 'auth-label' %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em class="auth-password-info">(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: 'auth-input' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="auth-field">
+    <%= f.label :password_confirmation, class: 'auth-label' %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'auth-input' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="auth-actions">
+    <%= f.submit "Sign up", class: 'auth-button' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="auth-actions">
+  <%= render "devise/shared/links" %>
+</div>
