Update the layouts and styling of the app

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,6 @@
 @import "registration";
 @import "sessions";
 @import "dashboard";
+@import "categories";
+@import "transactions";
+@import "profile";
