--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,15 +1,20 @@
-<%= form_with(model: @category, local: true) do |form| %>
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
+<div class="category-form">
+  <%= form_with(model: @category, local: true, html: { class: 'category-form-inner' }) do |form| %>
+    <div class="category-input">
+      <%= form.label :name, class: 'input-label' %>
+      <%= form.text_field :name, class: 'input-field', placeholder: 'Put your category name here' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :icon %>
-    <%= form.url_field :icon %>
-  </div>
+    <div class="category-input">
+      <%= form.label :icon, class: 'input-label' %>
+      <%= form.url_field :icon, class: 'input-field', placeholder: 'Put your image url here' %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit "Create Category" %>
-  </div>
-<% end %>
+    <div class="category-button">
+      <%= form.submit "Create Category", class: 'form-button' %>
+    </div>
+  <% end %>
+</div>
+<div class="auth-actions">
+  <%= link_to "Back", categories_path, class: 'back-link' %>
+</div>
