--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,19 +1,19 @@
-<h1>Edit Category</h1>
+<h1 class="edit_category-heading">Edit Category</h1>
 
-<%= form_with(model: @category, local: true) do |form| %>
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+<%= form_with(model: @category, local: true, html: { class: 'edit-category-form' }) do |form| %>
+  <div class="edit_category-input">
+    <%= form.label :name, class: 'edit-category-label' %>
+    <%= form.text_field :name, class: 'edit_input-field' %>
   </div>
 
-  <div class="field">
-    <%= form.label :icon %>
-    <%= form.url_field :icon %>
+  <div class="edit_category-input">
+    <%= form.label :icon, class: 'edit-category-label' %>
+    <%= form.url_field :icon, class: 'edit_input-field' %>
   </div>
 
-  <div class="actions">
-    <%= form.submit "Update Category" %>
+  <div class="edit_category-actions">
+    <%= form.submit "Update Category", class: 'edit_form-button' %>
   </div>
 <% end %>
 
-<%= link_to "Back", category_path(@category) %>
+<%= link_to "Back", category_path(@category), class: 'edit_back-link' %>
