--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,20 +1,34 @@
-<h1>Category Details</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Category Details</title>
+</head>
+<body>
+    <div class="show-category-details-container">
+        <h1 class="show-category-heading">Category Details</h1>
+        
+        <div class="show-category-info">
+            <p><strong class="show-info-label"><%= @category.name %></strong></p>
+            <% if @category.icon.present? %>
+                <p><strong class="show-info-label"><%= image_tag(@category.icon, class: 'show-category-image', width: 100, height: 100) %></strong></p>
+            <% end %>
+            <p><strong class="show-info-label">Total: <%= number_to_currency(@category.transactions.sum(:amount)) %></strong></p>
+        </div>
 
-<p><strong>Name:</strong> <%= @category.name %></p>
-<% if @category.icon.present? %>
-  <p><strong>Logo:</strong> <%= image_tag(@category.icon, width: 100, height: 100) %></p>
-<% end %>
-<p><strong>Total Transactions Amount:</strong> <%= number_to_currency(@category.transactions.sum(:amount)) %></p>
+        <div class="show-category-actions">
+            <%= link_to "Edit", edit_category_path(@category), class: 'show-category-link' %>
+            <%= form_with(model: @category, method: :delete, local: false, class: 'show-delete-form') do |form| %>
+                <%= form.submit "Delete", data: { confirm: "Are you sure you want to delete this category?" }, class: 'show-category-button' %>
+            <% end %>
+        </div>
 
-<%= link_to "Edit", edit_category_path(@category) %>
+        <h3 class="show-transaction-heading">Transactions</h3>
+        <%= link_to "View Transactions", category_transactions_path(@category), class: 'show-category-link' %>
+        <br>
 
-<%= form_with(model: @category, method: :delete, local: false) do |form| %>
-  <%= form.submit "Delete", data: { confirm: "Are you sure you want to delete this category?" } %>
-<% end %>
-
-<h3>Transactions</h3>
-<%= link_to "View Transactions", category_transactions_path(@category) %>
-<br>
-
-
-<%= link_to "Back to Categories", categories_path %>
+        <%= link_to "Back to Categories", categories_path, class: 'show-back-link' %>
+    </div>
+</body>
+</html>
