--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,40 +1,40 @@
-<h1>Transactions</h1>
-<p><strong>Name:</strong> <%= @category.name %></p>
-<% if @category.icon.present? %>
-  <p><strong>Logo:</strong> <%= image_tag(@category.icon, width: 100, height: 100) %></p>
-<% end %>
-<p><strong>Total Transactions Amount:</strong> <%= number_to_currency(@category.transactions.sum(:amount)) %></p>
+<h1 class="transactions-heading">Transactions</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Amount</th>
-      <th>Category</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @transactions.each do |transaction| %>
-      <tr>
-        <td><%= transaction.name %></td>
-        <td><%= number_to_currency(transaction.amount) %></td>
-        <td><%= transaction.category.name %></td>
-        <td>
-          <%= link_to 'Modify', category_transaction_path(transaction.category, transaction) %>
-          <%= form_with url: category_transaction_path(transaction.category, transaction), method: :delete, remote: true do |form| %>
-            <%= form.submit "Delete" %>
-          <% end %>
-        </td>
-      </tr>
+<div class="transactions-category">
+  <div class="transactions-category-logo-name">  
+    <% if @category.icon.present? %>
+    <div class="transactions-category-logo">
+      <strong><%= image_tag(@category.icon, class: 'transactions-category-image', width: 100, height: 100) %></strong>
+    </div>
+    <div class="transactions-category-name">
+      <strong><%= @category.name %></strong>
+    </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+  <div class="transactions-total-amount">
+    <strong>Total: <%= number_to_currency(@category.transactions.sum(:amount)) %></strong>
+  </div>
+</div>
 
-<%= link_to 'New Transaction', new_category_transaction_path(category_id: @category.id) %><br>
-<%= link_to 'Back to Categories', categories_path %>
+<div class="transactions-card-container">
+  <% @transactions.each do |transaction| %>
+    <div class="transaction-card">
+      <div class="transaction-card-header">
+        <div class="transaction-card-name"><%= transaction.name %></div>
+        <div class="transaction-card-amount"><%= number_to_currency(transaction.amount) %></div>
+      </div>
+      <div class="transaction-card-created-at">
+        <strong><%= time_ago_in_words(transaction.created_at) %> ago</strong>
+      </div>
+      <div class="transaction-card-actions">
+        <%= link_to 'Modify', category_transaction_path(transaction.category, transaction), class: 'transaction-link' %>
+        <%= form_with(url: category_transaction_path(transaction.category, transaction), method: :delete, remote: true, class: 'transaction-form') do |form| %>
+          <%= form.submit "Delete", class: 'transaction-button' %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+</div>
 
-
-
-
-
+<%= link_to 'New Transaction', new_category_transaction_path(category_id: @category.id), class: 'new-transaction-link' %><br>
+<%= link_to 'Back to Categories', categories_path, class: 'back-link' %>
