--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -14,5 +14,7 @@
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="auth-actions">
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
