Modify the registration page design

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -14,7 +14,7 @@
     </div>
   <% end %>
 
-  <div class="auth-actions">
+  <div class="auth-action-links">
     <%= render "devise/shared/links" %>
   </div>
 </div>
