--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -7,6 +7,17 @@
   margin-bottom: 20px;
 }
 
+.auth-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  background-color: #1e4a8d;
+  padding: 10px 20px;
+  border-radius: 8px;
+}
+
 .auth-form {
   background-color: #fff;
   border-radius: 8px;
@@ -39,14 +50,19 @@
 }
 
 .auth-actions {
-  margin-top: 20px;
   text-align: center;
 }
 
+.auth-actions a {
+  text-decoration: none;
+  color: aliceblue;
+}
+
 .auth-button {
-  background-color: #007bff;
-  color: #fff;
-  padding: 10px 20px;
+  text-decoration: none;
+  background: transparent;
+  color: aliceblue;
+  padding: 10px;
   font-size: 18px;
   border: none;
   border-radius: 4px;
@@ -55,7 +71,7 @@
 }
 
 .auth-button:hover {
-  background-color: #0056b3;
+  color: #0056b3;
 }
 
 @media screen and (max-width: 768px) {
@@ -78,4 +94,21 @@
   .auth-button {
     font-size: 16px;
   }
+}
+
+.auth-action-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.auth-action-links a {
+  text-decoration: none;
+  color: aliceblue;
+  background-color: cornflowerblue;
+  padding: 10px;
+  border-radius: 10px;
 }
