--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,14 @@
-<h2 class="auth-heading">Register</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'auth-form' }) do |f| %>
+  <div class="auth-nav">
+    <div class="auth-back-link">
+      <%= link_to "Back", root_path, class: 'auth-button' %>
+    </div>
+    <h2 class="auth-heading">Register</h2>
+    <div class="auth-actions">
+        <%= f.submit "Next", class: 'auth-button' %>
+    </div>
+  </div>
+
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="auth-field">
@@ -26,11 +34,9 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'auth-input' %>
   </div>
 
-  <div class="auth-actions">
-    <%= f.submit "Sign up", class: 'auth-button' %>
-  </div>
+
 <% end %>
 
-<div class="auth-actions">
-  <%= render "devise/shared/links" %>
+<div class="auth-action-links">
+  <%= render "devise/shared/links", class: 'auth-button' %>
 </div>
