--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -28,6 +28,6 @@
     </div>
   <% end %>
 
-  <%= link_to 'Back', category_transactions_path(@category), class: 'edit-transaction-link' %>
+  <%= link_to 'Back', category_transactions_path(@category), class: 'back-link' %>
 </body>
 </html>
