--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -20,7 +20,7 @@
         </div>
 
         <a href="<%= categories_path %>" class="dashboard-links">
-            <h2>Got to CMS</h2>
+            <h2>Go to CMS</h2>
         </a>
         <div class="dashboard-content">
             <h2>Your Recent Activity</h2>
